fiz some spacing and alignment issues in single post module

--- a/src/apps/Bradley/Pages/Customizable/Modules/Modules.scss
+++ b/src/apps/Bradley/Pages/Customizable/Modules/Modules.scss
@@ -12,7 +12,7 @@
   }
 
   @include respond-to(desktop) {
-    padding: 59px 107px;
+    padding: 60px 8.359375%;
     max-width: unset;
   }
 }
